Added content pages

--- a/main.html
+++ b/main.html
@@ -59,78 +59,94 @@
                 </div>
             </div>
         </a>
-        <div class="col-lg-4 col-md-6 col-xs-12 con" id="elem2">
-            <img class="w-100 image" src="images/content/image3.png" alt="">
-            <div class="image-hover">
-                <div class="text-row">
-                    <div class="text">Botanischer Garten</div>
-                    <div class="text2" id="BotatischerGartenDist"></div>
+        <a href="content_pages/bontanischerGarten/BotanischerGarten.html" id="elem2">
+            <div class="col-lg-4 col-md-6 col-xs-12 con">
+                <img class="w-100 image" src="images/content/image3.png" alt="">
+                <div class="image-hover">
+                    <div class="text-row">
+                        <div class="text">Botanischer Garten</div>
+                        <div class="text2" id="BotatischerGartenDist"></div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-xs-12 con" id="elem3">
-            <img class="w-100 image" src="images/content/image2.png" alt="">
-            <div class="image-hover">
-                <div class="text-row">
-                    <div class="text">Rheinhafen</div>
-                    <div class="text2" id="RheinhafenDist"></div>
+        </a>
+        <a href="content_pages/rheinhafen/Rheinhafen.html" id="elem3">
+            <div class="col-lg-4 col-md-6 col-xs-12 con">
+                <img class="w-100 image" src="images/content/image2.png" alt="">
+                <div class="image-hover">
+                    <div class="text-row">
+                        <div class="text">Rheinhafen</div>
+                        <div class="text2" id="RheinhafenDist"></div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-xs-12 con" id="elem4">
-            <img class="w-100 image" src="images/content/image4.png" alt="">
-            <div class="image-hover">
-                <div class="text-row">
-                    <div class="text">Lernzentrum</div>
-                    <div class="text2" id="LernzentrumDist"></div>
+        </a>
+        <a href="content_pages/bontanischerGarten/BotanischerGarten.html" id="elem4">
+            <div class="col-lg-4 col-md-6 col-xs-12 con">
+                <img class="w-100 image" src="images/content/image4.png" alt="">
+                <div class="image-hover">
+                    <div class="text-row">
+                        <div class="text">Lernzentrum</div>
+                        <div class="text2" id="LernzentrumDist"></div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-xs-12 con" id="elem5">
-            <img class="w-100 image" src="images/content/image5.png" alt="">
-            <div class="image-hover">
-                <div class="text-row">
-                    <div class="text">ZKM</div>
-                    <div class="text2" id="ZKMDist"></div>
+        </a>
+        <a href="content_pages/bontanischerGarten/BotanischerGarten.html" id="elem5">
+            <div class="col-lg-4 col-md-6 col-xs-12 con">
+                <img class="w-100 image" src="images/content/image5.png" alt="">
+                <div class="image-hover">
+                    <div class="text-row">
+                        <div class="text">ZKM</div>
+                        <div class="text2" id="ZKMDist"></div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-xs-12 con" id="elem6">
-            <img class="w-100 image" src="images/content/image6.png" alt="">
-            <div class="image-hover">
-                <div class="text-row">
-                    <div class="text">Rheinbrücke</div>
-                    <div class="text2" id="RheinbrückeDist"></div>
+        </a>
+        <a href="content_pages/bontanischerGarten/BotanischerGarten.html" id="elem6">
+            <div class="col-lg-4 col-md-6 col-xs-12 con">
+                <img class="w-100 image" src="images/content/image6.png" alt="">
+                <div class="image-hover">
+                    <div class="text-row">
+                        <div class="text">Rheinbrücke</div>
+                        <div class="text2" id="RheinbrückeDist"></div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-xs-12 con" id="elem7">
-            <img class="w-100 image" src="images/content/image7.png" alt="">
-            <div class="image-hover">
-                <div class="text-row">
-                    <div class="text">Schloss Gottesaue</div>
-                    <div class="text2" id="SchlossGottesaueDist"></div>
+        </a>
+        <a href="content_pages/bontanischerGarten/BotanischerGarten.html" id="elem7">
+            <div class="col-lg-4 col-md-6 col-xs-12 con">
+                <img class="w-100 image" src="images/content/image7.png" alt="">
+                <div class="image-hover">
+                    <div class="text-row">
+                        <div class="text">Schloss Gottesaue</div>
+                        <div class="text2" id="SchlossGottesaueDist"></div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-xs-12 con" id="elem8">
-            <img class="w-100 image" src="images/content/image8.png" alt="">
-            <div class="image-hover">
-                <div class="text-row">
-                    <div class="text">Schloss</div>
-                    <div class="text2" id="SchlossDist"></div>
+        </a>
+        <a href="content_pages/schloss/Schloss.html" id="elem8">
+            <div class="col-lg-4 col-md-6 col-xs-12 con">
+                <img class="w-100 image" src="images/content/image8.png" alt="">
+                <div class="image-hover">
+                    <div class="text-row">
+                        <div class="text">Schloss</div>
+                        <div class="text2" id="SchlossDist"></div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-xs-12 con" id="elem9">
-            <img class="w-100 image" src="images/content/image10.png" alt="">
-            <div class="image-hover">
-                <div class="text-row">
-                    <div class="text">Turmberg</div>
-                    <div class="text2" id="TurmbergDist"></div>
+        </a>
+        <a href="content_pages/bontanischerGarten/BotanischerGarten.html" id="elem9">
+            <div class="col-lg-4 col-md-6 col-xs-12 con">
+                <img class="w-100 image" src="images/content/image10.png" alt="">
+                <div class="image-hover">
+                    <div class="text-row">
+                        <div class="text">Turmberg</div>
+                        <div class="text2" id="TurmbergDist"></div>
+                    </div>
                 </div>
             </div>
-        </div>
+        </a>
     </div>
 </div>
 
