Changed main.html to index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <table style="align-self: center">
             <tr>
                 <td>
-                    <a href="main.html">
+                    <a href="index.html">
 
                         <button class="header-button"><i class="fas fa-street-view"></i>SPOTS</button>
                     </a>
