--- a/content_pages/schloss/Schloss.html
+++ b/content_pages/schloss/Schloss.html
@@ -16,14 +16,14 @@
 <body onload="init()">
 
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-    <a class="navbar-brand" href="../../main.html">Fotospots Karlsruhe</a>
+    <a class="navbar-brand" href="../../index.html">Fotospots Karlsruhe</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="../../main.html">SPOTS</a>
+                <a class="nav-link" href="../../index.html">SPOTS</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="../../map.html">MAP</a>
