Added shaking detection

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+<script src="js/shake.js"></script>
 <script src="js/location.js"></script>
 
 <div class="hero-image">
@@ -59,7 +60,7 @@
                 </div>
             </div>
         </a>
-        <a href="content_pages/bontanischerGarten/BotanischerGarten.html" id="elem2">
+        <a href="content_pages/botanischerGarten/BotanischerGarten.html" id="elem2">
             <div class="col-lg-4 col-md-6 col-xs-12 con">
                 <img class="w-100 image" src="images/content/image3.png" alt="">
                 <div class="image-hover">
@@ -81,7 +82,7 @@
                 </div>
             </div>
         </a>
-        <a href="content_pages/bontanischerGarten/BotanischerGarten.html" id="elem4">
+        <a href="content_pages/botanischerGarten/BotanischerGarten.html" id="elem4">
             <div class="col-lg-4 col-md-6 col-xs-12 con">
                 <img class="w-100 image" src="images/content/image4.png" alt="">
                 <div class="image-hover">
@@ -92,7 +93,7 @@
                 </div>
             </div>
         </a>
-        <a href="content_pages/bontanischerGarten/BotanischerGarten.html" id="elem5">
+        <a href="content_pages/botanischerGarten/BotanischerGarten.html" id="elem5">
             <div class="col-lg-4 col-md-6 col-xs-12 con">
                 <img class="w-100 image" src="images/content/image5.png" alt="">
                 <div class="image-hover">
@@ -103,7 +104,7 @@
                 </div>
             </div>
         </a>
-        <a href="content_pages/bontanischerGarten/BotanischerGarten.html" id="elem6">
+        <a href="content_pages/botanischerGarten/BotanischerGarten.html" id="elem6">
             <div class="col-lg-4 col-md-6 col-xs-12 con">
                 <img class="w-100 image" src="images/content/image6.png" alt="">
                 <div class="image-hover">
@@ -114,7 +115,7 @@
                 </div>
             </div>
         </a>
-        <a href="content_pages/bontanischerGarten/BotanischerGarten.html" id="elem7">
+        <a href="content_pages/botanischerGarten/BotanischerGarten.html" id="elem7">
             <div class="col-lg-4 col-md-6 col-xs-12 con">
                 <img class="w-100 image" src="images/content/image7.png" alt="">
                 <div class="image-hover">
@@ -136,7 +137,7 @@
                 </div>
             </div>
         </a>
-        <a href="content_pages/bontanischerGarten/BotanischerGarten.html" id="elem9">
+        <a href="content_pages/botanischerGarten/BotanischerGarten.html" id="elem9">
             <div class="col-lg-4 col-md-6 col-xs-12 con">
                 <img class="w-100 image" src="images/content/image10.png" alt="">
                 <div class="image-hover">
