--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
             <tr>
                 <td>
                     <a href="index.html">
-
-                        <button class="header-button"><i class="fas fa-street-view"></i>SPOTS</button>
+                        <button class="header-button" id="spot1">SPOTS</button>
+                        <button class="header-button" id="spot2"><i class="fas fa-street-view fa-2x"></i></button>
                     </a>
                 </td>
                 <td>
                     <a href="map.html">
-                        <button class="header-button"><i class="fas fa-map-marked-alt"></i> MAPS</button>
+                        <button class="header-button" id="map1">MAPS</button>
+                        <button class="header-button" id="map2"><i class="fas fa-map-marked-alt fa-2x" ></i></button>
                     </a>
                 </td>
             </tr>
