--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                 <td>
                     <a href="index.html">
                         <button class="header-button" id="spot1">SPOTS</button>
-                        <button class="header-button" id="spot2"><i class="fas fa-street-view fa-2x"></i></button>
+                        <button class="header-button" id="spot2"><img class="icon" src="images/icons/platzhalter.png" alt=""></button>
                     </a>
                 </td>
                 <td>
                     <a href="map.html">
                         <button class="header-button" id="map1">MAPS</button>
-                        <button class="header-button" id="map2"><i class="fas fa-map-marked-alt fa-2x" ></i></button>
+                        <button class="header-button" id="map2"><img class="icon" src="images/icons/map.png" alt=""></button>
                     </a>
                 </td>
             </tr>
