--- a/climbingTracker.html
+++ b/climbingTracker.html
@@ -1,78 +1,79 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f8f9fa;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            text-align: center;
+            color: #007bff;
+        }
+        h2 {
+            color: #007bff;
+        }
+        p {
+            margin-bottom: 20px;
+        }
+        ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+        li::before {
+            content: "\2022";
+            color: #007bff;
+            display: inline-block;
+            width: 1em;
+            margin-left: -1em;
+        }
+    </style>
+</head>
 <body>
-<h2>Privacy Policy</h2>
-<p>Lukas Freudenmann built the Climbing Tracker app as a free app. This SERVICE is provided by Lukas Freudenmann at no cost and is intended
-    for use as is.</p>
-<p>This page is used to inform website visitors regarding my policies with the collection, use, and
-    disclosure of Personal Information if anyone decided to use my Service.</p>
-<p>If you choose to use my Service, then you agree to the collection and use of information in
-    relation with this policy. The Personal Information that I collect are used for providing and
-    improving the Service. I will not use or share your information with anyone except as described
-    in this Privacy Policy.</p>
-
-<p><strong>Information Collection and Use</strong></p>
-<p>For a better experience while using our Service, I may require you to provide us with certain
-    personally identifiable information. 
-	The information that I request is retained on your device and is not
-    collected by me in any way.</p>
-<p>The app does use third party services that may collect information used to identify you.
-
-<p><strong>Log Data</strong></p>
-<p>I want to inform you that whenever you use [my|our] Service, in case of an error in the app I collect
-    data and information (through third party products) on your phone called Log Data. This Log Data
-    may include information such as your devices’s Internet Protocol (“IP”) address, device name,
-    operating system version, configuration of the app when utilising my Service, the time and date
-    of your use of the Service, and other statistics.</p>
-
-<p><strong>Cookies</strong></p>
-<p>Cookies are files with small amount of data that is commonly used an anonymous unique identifier.
-    These are sent to your browser from the website that you visit and are stored on your devices’s
-    internal memory.</p>
-<p><This Services does not uses these “cookies” explicitly. However, the app may use third party code
-    and libraries that use “cookies” to collection information and to improve their services. You
-    have the option to either accept or refuse these cookies, and know when a cookie is being sent
-    to your device. If you choose to refuse our cookies, you may not be able to use some portions of
-    this Service.</p>
-
-<p><strong>Service Providers</strong></p> <!-- This part need seem like it's not needed, but if you use any Google services, or any other third party libraries, chances are, you need this. -->
-<p>I may employ third-party companies and individuals due to the following reasons:</p>
-<ul>
-    <li>To facilitate our Service;</li>
-    <li>To provide the Service on our behalf;</li>
-    <li>To perform Service-related services; or</li>
-    <li>To assist us in analyzing how our Service is used.</li>
-</ul>
-<p>I want to inform users of this Service that these third parties have access to your Personal
-    Information. The reason is to perform the tasks assigned to them on our behalf. However, they
-    are obligated not to disclose or use the information for any other purpose.</p>
-
-<p><strong>Security</strong></p>
-<p>I value your trust in providing us your Personal Information, thus we are striving to use
-    commercially acceptable means of protecting it. But remember that no method of transmission over
-    the internet, or method of electronic storage is 100% secure and reliable, and I cannot
-    guarantee its absolute security.</p>
-
-<p><strong>Links to Other Sites</strong></p>
-<p>This Service may contain links to other sites. If you click on a third-party link, you will be
-    directed to that site. Note that these external sites are not operated by me. Therefore, I
-    strongly advise you to review the Privacy Policy of these websites. I have no control over, and
-    assume no responsibility for the content, privacy policies, or practices of any third-party
-    sites or services.</p>
-
-<p><strong>Children’s Privacy</strong></p>
-<p>This Services do not address anyone under the age of 13. I do not knowingly collect personal
-    identifiable information from children under 13. In the case I discover that a child under 13
-    has provided me with personal information, I immediately delete this. If you
-    are a parent or guardian and you are aware that your child has provided us with personal
-    information, please contact me so that I will be able to do necessary actions.</p>
-
-<p><strong>Changes to This Privacy Policy</strong></p>
-<p>I may update this Privacy Policy from time to time. Thus, you are advised to review this page
-    periodically for any changes. I will notify you of any changes by posting the new Privacy Policy
-    on this page. These changes are effective immediately, after they are posted on this page.</p>
-
-<p><strong>Contact Us</strong></p>
-<p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact
-    me.</p>
+    <div class="container">
+        <h1>Privacy Policy</h1>
+        <p>Lukas Freudenmann built the Climbing Tracker app as a free app. This SERVICE is provided by Lukas Freudenmann at no cost and is intended for use as is.</p>
+        <p>This page is used to inform website visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</p>
+        <p>If you choose to use my Service, then you agree to the collection and use of information in relation with this policy. The Personal Information that I collect are used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.</p>
+        <h2>Information Collection and Use</h2>
+        <p>For a better experience while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request is retained on your device and is not collected by me in any way.</p>
+        <p>The app does use third-party services that may collect information used to identify you.</p>
+        <h2>Log Data</h2>
+        <p>I want to inform you that whenever you use [my|our] Service, in case of an error in the app I collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device’s Internet Protocol (“IP”) address, device name, operating system version, configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</p>
+        <h2>Cookies</h2>
+        <p>Cookies are files with a small amount of data that are commonly used as an anonymous unique identifier. These are sent to your browser from the website that you visit and are stored on your device’s internal memory.</p>
+        <h2>Service Providers</h2>
+        <p>I may employ third-party companies and individuals due to the following reasons:</p>
+        <ul>
+            <li>To facilitate our Service;</li>
+            <li>To provide the Service on our behalf;</li>
+            <li>To perform Service-related services; or</li>
+            <li>To assist us in analyzing how our Service is used.</li>
+        </ul>
+        <p>I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</p>
+        <h2>Security</h2>
+        <p>I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</p>
+        <h2>Links to Other Sites</h2>
+        <p>This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over, and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</p>
+        <h2>Children’s Privacy</h2>
+        <p>This Service does not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to take necessary actions.</p>
+        <h2>Changes to This Privacy Policy</h2>
+        <p>I may update this Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately, after they are posted on this page.</p>
+        <h2>Contact Us</h2>
+        <p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me.</p>
+    </div>
 </body>
 </html>
